--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -25,7 +25,6 @@ img {
   display: grid;
   grid-template-columns: 50% 50%;
   height: 100vh;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6));
 }
 
 header {
@@ -42,7 +41,7 @@ header input {
   outline: none;
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 16px 0px 16px 0px;
-  border-bottom: 3px solid #df8e00;
+  border-bottom: 3px solid dodgerblue;
   color: #333;
   font-size: 20px;
   font-weight: 400;
@@ -107,10 +106,10 @@ main {
     grid-template-columns: 100%;
   }
   main {
-    margin-top: 50px;
+    margin-top: 0px;
   }
-}
-.icon {
-  color: white;
-  font-size: 1rem;
+  header {
+    padding: 0;
+    align-items: start;
+  }
 }/*# sourceMappingURL=main.css.map */
